# rustservices

./: .env  .gitignore  Cargo.toml  package.json  test.sqlite3-journal
migrations/2020-06-13-205631_create_users/: down.sql  up.sql
migrations/2020-06-16-035646_create_sessions/: down.sql  up.sql
src/: main.rs  routes.rs  schema.rs  users.rs
src/users/: model.rs  routes.rs
