[package]
name = "services"
version = "0.1.0"
authors = ["Sean Kwon <seankwn@live.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-server = "1.0.3"
serde = { version = "1.0.111", features = ["derive"]}
serde_json = "1.0"
futures = "0.3.5"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
bcrypt = "0.8"
jsonwebtoken = "7"
failure = "0.1.8"
chrono = { version = "0.4.6", features = ["serde"] }
